==> 654031/2025-E/libraries/zf_driver/zf_driver_uart.c <==
#include "zf_common_clock.h"
#include "zf_common_debug.h"
#include "zf_common_interrupt.h"
#include "zf_driver_uart.h"

void uart_write_byte (uart_index_enum uart_index, const uint8 dat)
{
	while(true == DL_UART_isBusy(uart_list[uart_index]));
	DL_UART_Main_transmitData(uart_list[uart_index], dat);                      // 写入发送数据
}

uint8 uart_read_byte (uart_index_enum uart_index, uint8 *data)
{
    zf_assert(NULL != data);

    uint8   return_state    = ZF_FALSE;
    vuint32 timeout_count   = UART_DEFAULT_TIMEOUT_COUNT;

    while(timeout_count)
    {
        if(false == DL_UART_isRXFIFOEmpty(uart_list[uart_index]))
        {
            break;
        }
        timeout_count --;
    }
    if(timeout_count)
    {
        *data = DL_UART_Main_receiveData(uart_list[uart_index]);
        return_state = ZF_TRUE;
    }

    return return_state;
}

uint8 uart_query_byte (uart_index_enum uart_index, uint8 *data)
{
    zf_assert(NULL != data);

    uint8   return_state    = ZF_FALSE;

    if(false == DL_UART_isRXFIFOEmpty(uart_list[uart_index]))                   // 读取到一个数据
    {
        *data = DL_UART_Main_receiveData(uart_list[uart_index]);                // 存储一个数据
        return_state = ZF_TRUE;
    }

    return return_state;
}

void uart_init (uart_index_enum uart_index, uint32 baud, uart_tx_pin_enum tx_pin, uart_rx_pin_enum rx_pin)
{
    static const DL_UART_Main_ClockConfig uart_clock_config =
    {
        .clockSel    = DL_UART_MAIN_CLOCK_BUSCLK,
        .divideRatio = DL_UART_MAIN_CLOCK_DIVIDE_RATIO_1
    };

    static const DL_UART_Main_Config uart_default_config =
    {
        .mode        = DL_UART_MAIN_MODE_NORMAL,
        .direction   = DL_UART_MAIN_DIRECTION_TX_RX,
        .flowControl = DL_UART_MAIN_FLOW_CONTROL_NONE,
        .parity      = DL_UART_MAIN_PARITY_NONE,
        .wordLength  = DL_UART_MAIN_WORD_LENGTH_8_BITS,
        .stopBits    = DL_UART_MAIN_STOP_BITS_ONE
    };

    afio_init
    (
        (gpio_pin_enum)(tx_pin & UART_PIN_INDEX_MASK),
        GPO,
        (gpio_af_enum)((tx_pin >> UART_PIN_AF_OFFSET) & UART_PIN_AF_MASK),
        GPO_AF_PUSH_PULL
    );
    afio_init
    (
        (gpio_pin_enum)(rx_pin & UART_PIN_INDEX_MASK),
        GPI,
        (gpio_af_enum)((rx_pin >> UART_PIN_AF_OFFSET) & UART_PIN_AF_MASK),
        GPI_PULL_UP
    );

    switch(uart_index)
    {
        case UART_0:    DL_UART_Main_setClockConfig(uart_list[uart_index], (DL_UART_Main_ClockConfig *) &uart_clock_config);   break;
        case UART_1:    DL_UART_Main_setClockConfig(uart_list[uart_index], (DL_UART_Main_ClockConfig *) &uart_clock_config);   break;
        case UART_2:    DL_UART_Main_setClockConfig(uart_list[uart_index], (DL_UART_Main_ClockConfig *) &uart_clock_config);   break;
        case UART_3:    DL_UART_Main_setClockConfig(uart_list[uart_index], (DL_UART_Main_ClockConfig *) &uart_clock_config);   break;
        default:        break;
    }

    DL_UART_Main_init(uart_list[uart_index], (DL_UART_Main_Config *) &uart_default_config);
    DL_UART_Main_setOversampling(uart_list[uart_index], DL_UART_OVERSAMPLING_RATE_8X);

    double buadrate_double = 40000000.0 / (double)baud / 8.0;
    uint16 buadrate_integer = (uint16)buadrate_double;
    uint16 buadrate_fractional = (uint16)((buadrate_double - buadrate_integer) * 64.0 + 0.5);
    DL_UART_Main_setBaudRateDivisor(uart_list[uart_index], buadrate_integer, buadrate_fractional);

    DL_UART_Main_enable(uart_list[uart_index]);
}
